--- a/mountain_project/build.gradle
+++ b/mountain_project/build.gradle
@@ -37,10 +37,18 @@ dependencies {
 	testAnnotationProcessor 'org.projectlombok:lombok'
 	/******************************************/
 
+	//sql로그 확인
+	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.9.0'
+	//메일전송
+	implementation 'org.springframework.boot:spring-boot-starter-mail'
+
+	//xml
+	// https://mvnrepository.com/artifact/com.fasterxml.jackson.dataformat/jackson-dataformat-xml
+	implementation group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-xml'
+
 	//webclient
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 }
-
-tasks.named('test') {
+	tasks.named('test') {
 	useJUnitPlatform()
-}
+	}
