--- a/mountain_project/src/main/resources/application.properties
+++ b/mountain_project/src/main/resources/application.properties
@@ -4,8 +4,8 @@ server.port:9090
 
 #Database
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
-#spring.datasource.url=jdbc:oracle:thin:@192.168.0.29:1521:xe
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521/xe
+spring.datasource.url=jdbc:oracle:thin:@192.168.0.29:1521:xe
+#spring.datasource.url=jdbc:oracle:thin:@localhost:1521/xe
 spring.datasource.username=c##mountain
 spring.datasource.password=mountain1234
 
